# celerrate

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  clippy.toml  deny.toml  rustfml.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
