[package]
name = "celerrate-cli"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "celerrate"
path = "src/main.rs"

[dependencies]
clap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
